Closed
Bug 787769
Opened 13 years ago
Closed 13 years ago
Paste copied image from Aurora to Paint.NET v3.5.10 fails
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
mozilla18
| Tracking | Status | |
|---|---|---|
| firefox15 | --- | unaffected |
| firefox16 | --- | unaffected |
| firefox17 | + | verified |
| firefox18 | + | verified |
People
(Reporter: alice0775, Assigned: bbondy)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
|
6.84 KB,
patch
|
jimm
:
review+
bajaj
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Build Identifier:
http://hg.mozilla.org/releases/mozilla-aurora/rev/0b5de274b868
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0 ID:20120831042009
Paste copied image to Paint.NET fails
Steps to reproduce:
1. Open https://bugzilla.mozilla.org/skins/standard/index/help.png and any other image
2. Right click on the image and Select "Copy Image"
3. Start Paint.NET v3.5.10 (Installed from http://www.getpaint.net/)
4. Paste from clip board
Actual results:
Fail to paste with an error message
Expected results:
The copied image should be pasted.
Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/8c63e260c4fa
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0 ID:20120731073938
Bad:
http://hg.mozilla.org/mozilla-central/rev/582d4c67b3a7
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0 ID:20120731191138
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=8c63e260c4fa&tochange=582d4c67b3a7
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/a1db720c9c36
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0 ID:20120731035237
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/4fa21b477540
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0 ID:20120731051939
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=a1db720c9c36&tochange=4fa21b477540
Suspected:
0a570be19457 Eddy Bruel — Bug 460969 - Fix image to clipboard code; r=netzen
| Assignee | ||
Updated•13 years ago
|
Assignee: nobody → netzen
| Assignee | ||
Comment 1•13 years ago
|
||
Attachment #657710 -
Flags: review?(jmathies)
| Assignee | ||
Comment 2•13 years ago
|
||
As per:
http://msdn.microsoft.com/en-us/library/windows/desktop/ms649013%28v=vs.85%29.aspx
Requests for CF_DIB should automatically be converted to CF_DIBV5.
But I think the problem with Paint .NET is that it doesn't know that and it looks at the advertised available formats and fails.
All that's needed to fix this bug is just adding the data flavor, but I also added code so that
we explicitly handle the format ourselves without a conversion.
I noticed without us handling the conversion ourselves, it does fix this bug, but a clipboard viewing program called ClipSpy.exe says CF_DIB data is unavailable.
Yet it says CF_DIBV5 and CF_DIB is available when Chrome copies images to the clipboard.
So I think us handling both formats explicitly is the best route.
The code style formatting in this file is a bit mixed, so I just did the changes with what the code style should be.
Updated•13 years ago
|
status-firefox17:
--- → affected
status-firefox18:
--- → affected
Updated•13 years ago
|
Attachment #657710 -
Flags: review?(jmathies) → review+
| Assignee | ||
Comment 3•13 years ago
|
||
Target Milestone: --- → mozilla18
Comment 4•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•13 years ago
|
status-firefox15:
--- → unaffected
status-firefox16:
--- → unaffected
| Assignee | ||
Comment 5•13 years ago
|
||
Comment on attachment 657710 [details] [diff] [review]
Patch v1.
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 460969
User impact if declined: Pasting images to some programs that do not support DIBv5 and that do not know that DIB can be requested if DIBv5 is available, will not work
Testing completed (on m-c, etc.): I tried this on today's nightly build and it worked.
Risk to taking this patch (and alternatives if risky): Low
String or UUID changes made by this patch: None
Attachment #657710 -
Flags: approval-mozilla-aurora?
Updated•13 years ago
|
Updated•13 years ago
|
Attachment #657710 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
| Assignee | ||
Comment 6•13 years ago
|
||
Comment 7•13 years ago
|
||
Mozilla/5.0 (Windows NT 6.1; rv:17.0) Gecko/17.0 Firefox/17.0
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0
Verified on Window 7 using Firefox 17 beta 1 that the copied images are pasted from the clipboard (without any errors) to Paint.NET v3.5.10 (verified by pasting several images using the Paste options from the Edit menu and the keyboard shortcut Ctrl+V).
Comment 8•13 years ago
|
||
Marking as verified with 18 b1 as well. No issues while pasting images from Firefox to Paint.
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0
You need to log in
before you can comment on or make changes to this bug.
Description
•