Bug 787769 - Clipboard option for CF_DIB is now explicitly specified. r=jimm